plugins {
    id 'java'
}

group 'com.siemens'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
      // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'

    // https://mvnrepository.com/artifact/org.swinglabs/swingx
    compile group: 'org.swinglabs', name: 'swingx', version: '1.6'


    // https://mvnrepository.com/artifact/com.itextpdf/itext7-core
    compile group: 'com.itextpdf', name: 'itext7-core', version: '7.1.7'

    // https://mvnrepository.com/artifact/org.controlsfx/controlsfx
    compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'

    // https://mvnrepository.com/artifact/com.jfoenix/jfoenix
    compile group: 'com.jfoenix', name: 'jfoenix', version: '8.0.4'

    // https://mvnrepository.com/artifact/javax.mail/mail
    compile group: 'javax.mail', name: 'mail', version: '1.4.1'

    testCompile group: 'junit', name: 'junit', version: '4.12'

    // https://mvnrepository.com/artifact/de.jensd/fontawesomefx
    compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'

    // https://mvnrepository.com/artifact/com.google.guava/guava
    compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'



    //dependencies ca sa mearga la Dragos :) vv
    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'

    // https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl
    compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.4.0-b180830.0438'

    // https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core
    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'


}


jar {
    manifest {
        attributes("Manifest-Version": "1.0",
                'Main-Class': 'com.siemens.view.ClientStart'
        )
    }
}

task fatJar(type: Jar) {
    manifest.from jar.manifest
    classifier = 'all'
    from {
        configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }

/*
     from("src/main/resources") {
            include 'pictures/**
            include 'style/**'
            include 'add_recuperare.fxml'
            include 'client_view.fxml'
            include 'consfirmare.fxml'
            include 'mail.properties'
            include 'pagina_sef.fxml'
            include 'superiors.xml'
            include 'user.properties'
     }
*/
    // sourceSets.main.resources.srcDirs = [ "src/main/resources/" ]

    with jar
}

